button radius, overflow fix

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -139,6 +139,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Montserrat", sans-serif; color: #000000;
+  overflow-x: hidden;
 }
 
 @media (min-width: 400px) {
@@ -284,6 +285,7 @@ body {
   background-color: white;
   color: black;
   border: 1px solid #e6e6e6;
+  border-radius: 5px;
   cursor: pointer;
   margin-top: 30px;
   font-weight: 700;
@@ -529,7 +531,7 @@ input[type="button"] {
   text-decoration: none;
   white-space: nowrap;
   background-color: rgba(255,255,255,0);
-  border-radius: 6 px;
+  border-radius: 5px;
   border: 0px solid #e6e6e6;
   cursor: pointer;
   box-sizing: border-box; }
